--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -53,7 +53,7 @@ a {
 }
 
 .header {
-  background: lightskyblue url("/images/headerBackground.png") no-repeat;
+  background: lightskyblue url("../images/headerBackground.png") no-repeat;
   background-size: cover;
   height: 100vh;
   margin: 0 auto;
@@ -181,7 +181,7 @@ a {
         content:'';
         position: absolute;
         display: block;
-        background-image: url("/images/svg/arrow.svg");
+        background-image: url("../images/svg/arrow.svg");
         background-repeat: no-repeat;
         width: 20px;
         height: 20px;
@@ -252,7 +252,7 @@ a {
 
 //SECTION--WHY__SECTION--WHY__SECTION--WHY__SECTION--WHY__SECTION--WHY__SECTION--WHY__SECTION--WHY__SECTION--WHY__
 .why {
-  background: lightskyblue url("/images/whyBackground.png") no-repeat;
+  background: lightskyblue url("../images/whyBackground.png") no-repeat;
   background-size: cover;
   height: 704px;
   margin: 0 auto;
@@ -320,7 +320,7 @@ a {
     justify-content: space-around;
     align-items: center;
     height: 100%;
-    background: url("/images/svg/line.svg") no-repeat center top;
+    background: url("../images/svg/line.svg") no-repeat center top;
 
     &__svg-section {
 
@@ -333,8 +333,6 @@ a {
       & svg {
         width: 64px;
         height: 64px;
-        //background: green;
-        //border-radius: 48px;
         fill: red;
       }
 
@@ -353,7 +351,7 @@ a {
 }
 //SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND
 .grand, .grand-two{
-  background: mediumpurple url("/images/grandBackround.png") no-repeat;
+  background: mediumpurple url("../images/grandBackround.png") no-repeat;
   height: 684px;
 
   &__body {
@@ -385,7 +383,7 @@ a {
   }
 }
 .grand-two {
-  background: darkorange url("/images/grandBackroundTwo.png") no-repeat;
+  background: darkorange url("../images/grandBackroundTwo.png") no-repeat;
   height: 684px;
   &__body{
     justify-content: end;
@@ -393,7 +391,7 @@ a {
 }
 //SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT
 .what{
-  background: url("/images/whatBackround.png") no-repeat;
+  background: url("../images/whatBackround.png") no-repeat;
   height: 680px;
   &__body{
     //display: flex;
@@ -430,7 +428,7 @@ a {
             padding-left: 35px;
             &:before{
               content:'';
-              background-image: url("/images/svg/quote-left.svg");
+              background-image: url("../images/svg/quote-left.svg");
               background-repeat: no-repeat;
               display: block;
               width: 20px;
