--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -157,9 +157,12 @@ a {
   }
 
   &__footer {
-    text-align: center;
-    padding-top: 271px;
-
+    //text-align: center;
+    //padding-top: 271px;
+    position: absolute;
+    bottom: 120px;
+    left: 50%;
+    transform: translate(-50%);
     & > p {
       text-align: center;
       position: relative;
@@ -254,13 +257,13 @@ a {
 .why {
   background: lightskyblue url("../images/whyBackground.png") no-repeat;
   background-size: cover;
-  height: 704px;
+  min-height: 704px;
   margin: 0 auto;
+  height: 100%;
 
   &__body {
     display: flex;
-    gap: 136px;
-
+    //gap: 136px;
     &__text-block {
       display: flex;
       flex-direction: column;
@@ -269,9 +272,11 @@ a {
       width: 100%;
       height: 100%;
       max-width: 648px;
-      max-height: 344px;
+      min-height: 344px;
       margin: 190px 0;
       overflow: hidden;
+      margin-right: max(136px);
+
 
       & > h1 {
         @extend %fontsStyleTitle;
@@ -292,16 +297,15 @@ a {
     &__img-block {
       position: relative;
       margin-top: 124px;
+      margin-bottom: 124px;
       display: flex;
       flex-direction: column;
       gap: 16px;
-      width: 424px;
+      //min-width: 424px;
 
       & > img {
         width: 100%;
-        height: 100%;
-        max-width: 350px;
-        max-height: 220px;
+        height: auto;
         object-fit: cover;
       }
       & img:last-child {
@@ -312,28 +316,33 @@ a {
 }
 
 .banner {
-  height: 306px;
+  //height: 306px;
   background: #333333;
 
   &__body {
     display: flex;
-    justify-content: space-around;
+    //justify-content: space-around;
+    gap: 290px;
     align-items: center;
     height: 100%;
-    background: url("../images/svg/line.svg") no-repeat center top;
-
+    background: url("../images/svg/line.svg") no-repeat center top 60px;
+    padding-bottom: 59px;
+    padding-top: 107px;
     &__svg-section {
-
-      padding-top: 107px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       gap: 24px;
       & svg {
-        width: 64px;
-        height: 64px;
+        width: 100px;
+        height: 100px;
         fill: red;
+        padding: 16px;
+        background:  #333333;
+        //background:  red;
+        border-radius: 50%;
+        overflow: hidden;
       }
 
       & > p {
@@ -352,22 +361,25 @@ a {
 //SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND__SECTION-GRAND
 .grand, .grand-two{
   background: mediumpurple url("../images/grandBackround.png") no-repeat;
-  height: 684px;
+  min-height: 684px;
+  height: 100%;
 
   &__body {
     display: flex;
+    margin-bottom: 120px;
     //justify-content: end;
     &__text-block {
       max-width: 50%;
       padding: 44px 32px;
       margin-top: 220px;
       background: rgba(35, 35, 35, 0.9);
-      overflow: hidden;
+      //overflow: hidden;
       height: 100%;
-      max-height: 344px;
+      //max-height: 344px;
 
       & > p {
         @extend %fontsStyleText;
+        padding: 1px;
       }
 
       & > h3 {
@@ -384,7 +396,6 @@ a {
 }
 .grand-two {
   background: darkorange url("../images/grandBackroundTwo.png") no-repeat;
-  height: 684px;
   &__body{
     justify-content: end;
   }
@@ -392,7 +403,9 @@ a {
 //SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT__SectionWHAT
 .what{
   background: url("../images/whatBackround.png") no-repeat;
-  height: 680px;
+  min-height: 680px;
+  height: 100%;
+  width: 100vw;
   &__body{
     //display: flex;
     &>h4{
@@ -403,17 +416,31 @@ a {
     &__info-block{
       display: flex;
       justify-content: space-between;
-      &>img{
-        height: 100%;
-        width: 100%;
-        min-width: 440px;
-        min-height:280px;
-        object-fit: cover;
+      margin-bottom: 180px;
+      height: content-box;
+
+      &__img-block{
+        //height: 100%;
+        //width: 100%;
+        //min-width: 440px;
+        //min-height:280px;
+        //object-fit: cover;
+        //display: block;
+        //width: auto;
+        //max-height: 100%;
+        //width: 100%;
+        &>img{
+          height: 100%;
+          object-fit: cover;
+          display: block;
+          width: auto;
+          //max-height: 100%;
+        }
       }
       &__text{
+        display: block;
         background: #333333;
-        height: 100%;
-        max-height: 280px;
+        height: auto;
         overflow: hidden;
         &>h3{
           @extend %fontsStyleGrandTitle;
