--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -433,7 +433,7 @@ a {
           height: 100%;
           object-fit: cover;
           display: block;
-          width:-webkit-fill-available;;
+          width:-webkit-fill-available;
           //max-height: 100%;
         }
       }
